fix: main template margin too big

--- a/src/templates/Main/Main.module.scss
+++ b/src/templates/Main/Main.module.scss
@@ -1,10 +1,14 @@
 @use '../../../styles/mixins/breakpoints';
 
 .main {
-  margin: 3.5rem 9rem 0;
+  margin: 3.5rem 2rem 0 4rem;
 
   @include breakpoints.smLandscape {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+
+  @include breakpoints.md {
+    margin: 3.5rem 9rem 0;
   }
 }
